add dynamic web rendering

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <td>mary@example.com</td>
             <td>123456</td>
           </tr> -->
-          <tr id="template">
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
+          <!-- <tr id="template">
+            <td class="firstName"></td>
+            <td class="seconfName"></td>
+            <td class="emailAd"></td>
+            <td class="phoneNum"></td>
+          </tr> -->
         </tbody>
       </table>
     </div>
